MAINT-2822 Check for pre-existing tx-resource before attempting to import, when running in read-only mode